Completed Odin-Recipes assignment

--- a/recipes/Stir Fry Beef with Rice Noodles.html
+++ b/recipes/Stir Fry Beef with Rice Noodles.html
@@ -12,13 +12,28 @@
     <img src="BEEF-DSTRY-FRY-4.png">
     <p>But not to fret, with a few instructions, you too can somewhat kinda attempt making this Chinese staple at home as well.</p>
     <p>Ingredients</p>
-    <ul><li>Flat white rice noodles (either pre-cooked or uncooked rice flour noodle rice sticks)</li>
+    <ul><li>Flat white rice noodles (uncooked rice flour noodle rice sticks)</li>
         <li>1 cup sliced green onions</li>
-        <li>1  cup sliced onions</li>
-        <li>1cup green bean sprouts</li>
+        <li>1 cup sliced onions</li>
+        <li>1 cup green bean sprouts</li>
         <li>2/3 cup top sirloin strip steak cut into thin strips</li>
-        <li>1 tablespoon canola/vegetable/peanut oil</li>
+        <li>1 tablespoon canola/vegetable/peanut oil (use a flavor neutral cooking oil with a high smoke point)</li>
+        <li>2 Garlic cloves, diced</li>
+        <li>3 tablespoons soy sauce</li>
+        <li>1 tablespoon sesame oil</li>
+        <li>Chili oil with red pepper flakes (use as needed, per taste)</li>
         </ul>
+
+    <p>Steps</p>
+    <ol><li>Cook the noodles per instructions, leaving them a little undercooked. Drain and rinse under cold water. Drain again, use your fingers to separate the noodles so they do not clump together, and set them aside.</li>
+        <li>Heat a wok over high heat. Add the cooking oil and spread evenly over the surface of the wok, giving it a chance to coat the entire inside of the wok. Add the garlic slices and let them toast briefly so that the oil becomes infused with garlic flavor. Now add the beef and stir fry until browned, then remove beef and garlic from wok and set aside.</li>
+        <li>Add the onions, stir fry for 1 minute before adding the bean sprouts and stir frying for another 30 seconds. Remove both and set aside.</li>
+        <li>Reduce heat to medium, and add the noodles along with the sesame oil and soy sauce. Mix them well so that the noodles are thoroughly covered.</li>
+        <li>Bring the heat back up to high. Add the beef, onions and bean sprouts. Toss well.</li>
+        <li>Turn off heat. Add the green onions and chili oil with red pepper flakes. Toss well again, using only the residual heat.</li>
+        <li>Plate and serve!</li>
+        <li>If you used a wok, you need to wash and re-season before joining everyone else to eat!.</li>
+        </ol>
 
 
 
