corrected a typo on the last line

--- a/recipes/Stir Fry Beef with Rice Noodles.html
+++ b/recipes/Stir Fry Beef with Rice Noodles.html
@@ -32,7 +32,7 @@
         <li>Bring the heat back up to high. Add the beef, onions and bean sprouts. Toss well.</li>
         <li>Turn off heat. Add the green onions and chili oil with red pepper flakes. Toss well again, using only the residual heat.</li>
         <li>Plate and serve!</li>
-        <li>If you used a wok, you need to wash and re-season before joining everyone else to eat!.</li>
+        <li>If you used a wok, you need to wash and re-season before joining everyone else to eat.</li>
         </ol>
 
 
